# hi_jarvis

./: .gitmodules  README.md
src/cpp/openWakeWord/: CMakeLists.txt  openwakeword.cpp  openwakeword.hpp
src/python/wakeword/: config.py  logger.py  util.py  wakeword_service.py
